# cpp_course

labs/Pixelmancy_v1.0.1/Pixelmancy/: .clang-format  .clang-tidy  .clangd  CHANGELOG.md  CMakeLists.txt  Makefile
labs/Pixelmancy_v1.0.1/Pixelmancy/cmake/: cotire.cmake
labs/Pixelmancy_v1.0.1/Pixelmancy/libs/: CMakeLists.txt
labs/Pixelmancy_v1.0.1/Pixelmancy/libs/cgif/: CMakeLists.txt  LICENSE  README.md
labs/Pixelmancy_v1.0.1/Pixelmancy/libs/cgif/examples/: cgif_example_video.c
labs/Pixelmancy_v1.0.1/Pixelmancy/libs/cgif/src/: cgif_raw.c
labs/Pixelmancy_v1.0.1/Pixelmancy/libs/fmt-11.1.3/: CMakeLists.txt
labs/Pixelmancy_v1.0.1/Pixelmancy/libs/lodepng/: CMakeLists.txt  example_png_info.cpp  lodepng.cpp  lodepng.h
labs/Pixelmancy_v1.0.1/Pixelmancy/libs/lodepng/cmake/: lodepng-config.cmake.in
labs/Pixelmancy_v1.0.1/Pixelmancy/scripts/: autograder.sh  build.sh  cleanup.sh  fix_installs.sh  format.sh  test.sh
labs/Pixelmancy_v1.0.1/Pixelmancy/src/: Circle.cpp  Circle.hpp  CircleObject.cpp  CircleObject.hpp  ColorPalette.cpp  ColorPalette.hpp  Common.hpp  CommonConfig.hpp  DrawableObject.cpp  DrawableObject.hpp  FilledShape.cpp  FilledShape.hpp  Gif.cpp  Gif.hpp  IDrawable.hpp  Image.cpp  Image.hpp  Line.cpp  Line.hpp  LineArt.cpp  LineArt.hpp  PNG.cpp  PNG.hpp  SquareObject.cpp  SquareObject.hpp  sizei2d.hpp
labs/Pixelmancy_v1.0.1/Pixelmancy/src/colors/: Color.hpp  ColorHash.hpp  ColorMatcher.cpp  ColorMatcher.hpp  ColorSpaceDistance.cpp  ColorSpaceDistance.hpp
labs/Pixelmancy_v1.0.1/Pixelmancy/src/logger/: Log.cpp  Log.hpp  Logger.hpp  ostream_logger.hpp
labs/Pixelmancy_v1.0.1/Pixelmancy/standalone/: CMakeLists.txt  config.hpp.in  main.cpp
labs/Pixelmancy_v1.0.1/Pixelmancy/tests/: CMakeLists.txt
labs/Pixelmancy_v1.0.1/Pixelmancy/tests/src/: common.hpp  main.cpp  test_colour.cpp  test_config.hpp.in  test_frame.cpp  test_gif.cpp  test_image.cpp  test_lines.cpp  test_shapes.cpp
labs/lab1_intro/: main.cpp  rgbapixel.cpp
labs/lab2_debug/: Makefile  processImage.cpp
labs/lab3_memory/: allocator.cpp  room.cpp  room.h
labs/lab4_inheritance/: circle.cpp  circle.h  flower.cpp  flower.h  rectangle.h  shape.h  test_destructor.cpp  test_slicing.cpp  test_virtual.cpp  triangle.cpp  truck.cpp  truck.h
labs/lab4_inheritance/lab4_inheritance/: Makefile  circle.cpp  drawable.h  flower.cpp  flower.h  line.cpp  line.h  main.cpp  shape.cpp  shape.h  test_constructor.cpp  test_pure_virtual.cpp  triangle.h
labs/lab5_gdb/: Makefile  canvas.cpp  canvas.h  drawable.h  list.cpp  list.h  list_given.cpp  list_given.h  main.cpp  png.cpp  png.h  pnglayer.cpp  pnglayer.h  rgbapixel.h  shuffleCards.cpp
labs/lab6_dict/: Makefile  anagram_dict.cpp  anagram_finder.cpp  cartalk_puzzle.cpp  common_words.cpp  fac.cpp  fib.cpp  fib_generator.cpp  find_common_words.cpp  homophone_puzzle.cpp  pronounce_dict.cpp
mps/mp2_intro/: Makefile  intro.cpp  intro.h  main.cpp
mps/mp2_intro/RGBA/: rgbapixel.h
mps/mp3_collage/: Makefile  canvas.cpp  canvas.h  drawable.h  main.cpp  pnglayer.cpp  pnglayer.h  rectangle.cpp  rgbapixel.cpp  shape.cpp  shape.h
